--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@aws-sdk/client-dynamodb": "^3.521.0",
     "@aws-sdk/credential-providers": "^3.521.0",
     "@aws-sdk/lib-dynamodb": "^3.521.0",
+    "@types/aws-lambda": "^8.10.134",
     "aws-sdk": "^2.1566.0",
     "serverless-appsync-plugin": "^2.7.0"
   }
