fix: subCategories and SubSubCategories must be array

--- a/src/outlish-api/unit-resolvers/category/category-resolvers.yml
+++ b/src/outlish-api/unit-resolvers/category/category-resolvers.yml
@@ -7,6 +7,15 @@ Query.getProductsByCategory:
         timeout: 10
         handler: "src/outlish-api/unit-resolvers/category/getProductsByCategory.handler"
 
+Query.getAllCategories:
+  kind: UNIT
+  dataSource:
+    type: "AWS_LAMBDA"
+    config:
+      function:
+        timeout: 10
+        handler: "src/outlish-api/unit-resolvers/category/getAllCategories.handler"
+
 Mutation.createCategory:
   kind: UNIT
   dataSource:
