fix: types and change lambda function to correct folder

--- a/src/outlish-api/unit-resolvers/product/product-resolvers.yml
+++ b/src/outlish-api/unit-resolvers/product/product-resolvers.yml
@@ -16,6 +16,24 @@ Query.getProduct:
         timeout: 10
         handler: "src/outlish-api/unit-resolvers/product/getProduct.handler"
 
+Query.getProductsByCategory:
+  kind: UNIT
+  dataSource:
+    type: "AWS_LAMBDA"
+    config:
+      function:
+        timeout: 10
+        handler: "src/outlish-api/unit-resolvers/product/getProductsByCategory.handler"
+
+Query.getProductsBySubCategory:
+  kind: UNIT
+  dataSource:
+    type: "AWS_LAMBDA"
+    config:
+      function:
+        timeout: 10
+        handler: "src/outlish-api/unit-resolvers/product/getProductsBySubCategory.handler"
+
 Mutation.createProduct:
   kind: UNIT
   dataSource:
