chore: npm i sdk for s3 bucket

--- a/serverless.yml
+++ b/serverless.yml
@@ -26,7 +26,9 @@ custom:
 
 appSync: ${file(src/outlish-api/appSync.yml)}
 
-resources: ${file(src/base-services/database/dynamoDB.yml)}
+resources:
+  - ${file(src/base-services/database/dynamoDB.yml)}
+  - ${file(src/base-services/s3-storage/s3.yml)}
 
 functions:
   - ${file(src/outlish-api/functions/authorizer/authorizer.yml)}
