--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.521.0",
+    "@aws-sdk/client-s3": "^3.536.0",
     "@aws-sdk/credential-providers": "^3.521.0",
     "@aws-sdk/lib-dynamodb": "^3.521.0",
     "@types/aws-lambda": "^8.10.134",
