--- a/src/base-services/s3-storage/s3.yml
+++ b/src/base-services/s3-storage/s3.yml
@@ -4,3 +4,12 @@ Resources:
     DeletionPolicy: Retain
     Properties:
       BucketName: outlish-s3-bucket
+      AccessControl: PublicRead
+      CorsConfiguration:
+        CorsRules:
+          - AllowedHeaders:
+              - "*"
+            AllowedMethods:
+              - GET
+            AllowedOrigins:
+              - "*"
