--- a/src/base-services/s3-storage/s3.yml
+++ b/src/base-services/s3-storage/s3.yml
@@ -3,7 +3,7 @@ Resources:
     Type: "AWS::S3::Bucket"
     DeletionPolicy: Retain
     Properties:
-      BucketName: outlish-s3-bucket
+      BucketName: ${env:AWS_S3_BUCKET}
       AccessControl: PublicRead
       CorsConfiguration:
         CorsRules:
