feature: url saved as attribute i dynamo

--- a/serverless.yml
+++ b/serverless.yml
@@ -23,6 +23,11 @@ custom:
   esbuild:
     bundle: true
     minify: false
+    external:
+      - sharp
+    packagerOptions:
+      scripts:
+        - npm install --os=linux --cpu=x64 sharp
 
 appSync: ${file(src/outlish-api/appSync.yml)}
 
@@ -32,4 +37,3 @@ resources:
 
 functions:
   - ${file(src/outlish-api/functions/authorizer/authorizer.yml)}
-  - ${file(src/outlish-api/functions/addTestProductsData/addTestProductsData.yml)}
