--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/lib-dynamodb": "^3.521.0",
     "@types/aws-lambda": "^8.10.134",
     "aws-sdk": "^2.1566.0",
-    "serverless-appsync-plugin": "^2.7.0"
+    "serverless-appsync-plugin": "^2.7.0",
+    "sharp": "^0.33.3"
   }
 }
