fix: removed hand chaged file

--- a/.env_example
+++ b/.env_example
@@ -6,5 +6,7 @@ AWS_MY_SECRET_ACCESS_KEY=YOUR_OWN_USERNAME_ACCESS_KEY
 
 OUTLISH_TABLE=YOUR_OWN_DYNAMODB_DATABASE
 
-API_KEY=YOUR_SECRET_KEY
+API_KEY_NAME=YOUR_SECRET_KEY
 API_KEY_EXPIRES_AFTER= choice 24h, 30d, 3M or 1y for example
+
+AWS_S3_BUCKET=YOUR_BUCKET_NAME
